added addon for quick input bookmark.

--- a/src/main/webapp/WEB-INF/views/public/list_more.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_more.jspx
@@ -40,7 +40,7 @@
       </a>
     </span>
     <span class="new">
-    	Drag the quick tool to bookmarks toolbar:
+    	<spring:message code="AddOnNotice" htmlEscape="false"/>
 			<a href='javascript:(
 	  function(e,t){
 	    var%20n=e.document;
@@ -83,7 +83,9 @@
 	      },1
 	    )
 	  }
-	)(window)'>ShareTheGoodOnes!</a>
+	)(window)'><spring:message code="AddOnName" htmlEscape="false"/>
+	<spring:url value="/resources/images/addon.png" var="addon_img_url" />
+	<img src="${addon_img_url}"/></a>
     </span>
   </div>
   <br/>
