--- a/src/main/webapp/WEB-INF/views/public/list_more_twitter.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_more_twitter.jspx
@@ -15,18 +15,9 @@
 		<spring:message code="label_public_index" arguments="${spaceOwner},${empty description ? publicDescription : description}" htmlEscape="false" var="title"/>
   	</c:otherwise>
   </c:choose>
-  <util:panel id="title" title="${title}">
-  <!-- <span class="new">
-      <spring:url value="/twitters" var="write_url">
-        <spring:param name="form" />
-      </spring:url>
-      <a href="${write_url}">
-        <spring:url value="/resources/images/addnote.png" var="write_img_url" />
-        <spring:message arguments="${typeName}" code="global_menu_newnote" var="add_message" htmlEscape="false" />
-        <img alt="${fn:escapeXml(add_message)}" src="${write_img_url}" title="${fn:escapeXml(add_message)}" />
-      </a>
-    </span> -->	
-   <span> <!-- class="new" this style make a right align, while make the line height too low.-->
+  <div style="background: #efefef; padding: 5px; margin-bottom: 3px">
+   <div style="text-align: center; padding-bottom: 5px"><b>${title}</b></div>
+     <span> <!-- class="new" this style make a right align, while make the line height too low.-->
       <spring:url value="/twitters" var="write_url">
         <spring:param name="form" />
       </spring:url>
@@ -47,56 +38,7 @@
         <img alt="${fn:escapeXml(add_message)}" src="${create_img_url}" title="${fn:escapeXml(add_message)}" />
       </a>
     </span>
-    <span class="new">
-    	<spring:message code="AddOnNotice" htmlEscape="false"/>
-			<a href='javascript:(
-	  function(e,t){
-	    var%20n=e.document;
-	    setTimeout(
-	      function(){
-	        function%20a(e){
-	          if(e.data==="destroy_bookmarklet"){
-	            var%20r=n.getElementById(t);
-	            if(r){
-	              n.body.removeChild(r);
-	              r=null
-	            }
-	          }
-	        }
-	        var%20t="DELI_bookmarklet_iframe",r=n.getElementById(t);
-	        if(r){
-	          return
-	        }
-	        var%20i="http://localhost/bigbang/contents?form",s=n.createElement("iframe");
-	        s.id=t;
-	        s.src=i+"&amp;url="+encodeURIComponent(e.location.href)
-	        +"&amp;title="+encodeURIComponent(n.title)
-	        +"&amp;note="+encodeURIComponent(""+(e.getSelection?e.getSelection():n.getSelection?n.getSelection():n.selection.createRange().text))
-	        +"&amp;v=1.1";
-	        s.style.position="fixed";
-	        s.style.top="0";
-	        s.style.left="0";
-	        s.style.height="100%25";
-	        s.style.width="100%25";
-	        s.style.zIndex="16777270";
-	        s.style.border="none";
-	        s.style.visibility="hidden";
-	        s.onload=function(){
-	          this.style.visibility="visible"
-	        };
-	        n.body.appendChild(s);
-	        var%20o=e.addEventListener?"addEventListener":"attachEvent";
-	        var%20u=o=="attachEvent"?"onmessage":"message";
-	        e[o](u,a,false)
-	      },1
-	    )
-	  }
-	)(window)'><spring:message code="AddOnName" htmlEscape="false"/>
-	<spring:url value="/resources/images/addon.png" var="addon_img_url" />
-	<img src="${addon_img_url}"/></a>
-    </span>
-      
-  </util:panel>
+  </div>
   <br/>
   <page:contentPane id="pl_com_aeiou_bigbang_domain_Content" items="${contents}" label="${tag}" z="hnfyfk7YNdTBdBza4/mViLT4aos=">
       <table:twitterlist data="${contents}" id="l_com_aeiou_bigbang_domain_Content" twittertype="${twittertype}" path="/public" spaceOwner="${spaceOwner}" publisher="${publisher}" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
