fixed the bug that when user has logged in, then he click some log to see the detail, the controller was always dereicted to the publicController. while the public controller will jump to remarkController to do the work for prepare the data to display. that caused a bug: if user is logged in, the view will display the "adding Remark Form", and the controller has not been the original, so the messageresource is not a valid one, so it can not fetch the string from the i18n files. (and we saw "cna not find "SHOW_TO_EVERYONE" from *.properties file. ------------------------- Now I added code in index.jspx, if it's logged in status, we set the link under every blog item, to make them go to remarkContrller when clicked, if it's not logged in, then still go to publicController(because every one should beable to read the blogs even have not logged in.

--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -9,6 +9,7 @@
   <spring:message code="publicDescription" htmlEscape="false" var="publicDescription"/>
   <spring:message code="NotesAndPraysOfFriend" htmlEscape="false" arguments="${spaceOwner}" var="NotesAndPraysFromFriend"/>
   
+  <!-- The Title Area, including owner info, butttons for adding blog, adding bookmark, leaving message and addon. -->
   <c:choose>
   	<c:when test="${empty spaceOwner or spaceOwner eq 'admin'}">
 		<spring:message code="publicDescription" htmlEscape="false" var="title"/>
@@ -161,13 +162,22 @@
   	  <util:theme/>  	  
     </c:if>    
   </div>
-  <!-- display the diary of the user -->
+
+  <!-- display the blog of the user -->
   <c:if test="${not empty twitterLeft}">
+	  <c:choose>
+	     <c:when test="${pageContext['request'].userPrincipal != null}">
+	  		<c:set value="/remarks" var="listDetailTargetController"/>
+	  	 </c:when>
+	  	 <c:otherwise>
+	  		<c:set value="/public" var="listDetailTargetController"/>
+	  	 </c:otherwise>
+	  </c:choose>
 	  <table class="tWireless" style="margin-bottom: 0px"><tr>
 	  	<c:if test="${not empty twitterLeft}">
 		  	<td class="tWireless nopaddingleft" valign="top">
 			  <page:contentPane id="twitterLeft" items="${twitterLeft}" label="${NotesAndPrays}" bottom="8">
-			    <table:twitterbox data="${twitterLeft}" id="l_com_aeiou_bigbang_domain_Content" type="self" path="/public" spaceOwner="${spaceOwner}">
+			    <table:twitterbox data="${twitterLeft}" id="l_com_aeiou_bigbang_domain_Content" type="self" path="${listDetailTargetController}" spaceOwner="${spaceOwner}">
 			        <table:column id="c_com_aeiou_bigbang_domain_Content_title" property="title" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
 			        <table:column id="c_com_aeiou_bigbang_domain_Content_sourceURL" property="id" z="s58Apv8PkSRyKzF8JLn0IqIrTNc="/>
 			        <table:column id="c_com_aeiou_bigbang_domain_Content_publisher" property="type" z="JoA6rckfK+Yqfnqa1ScNuIgPZBg="/>
@@ -188,6 +198,8 @@
 	  	</c:if>
 	  </tr></table>
   </c:if>
+  
+  <!-- display the bookmarks of the user. -->
   <!-- c:set var="tagsize" value="${bigTags.size()}" scope="request" /> -->
   <table class="tWireless"><tr>
   	<td class="tWireless nopaddingleft" valign="top">
