--- a/src/main/webapp/WEB-INF/views/messages/list.jspx
+++ b/src/main/webapp/WEB-INF/views/messages/list.jspx
@@ -4,10 +4,16 @@
     <jsp:output omit-xml-declaration="yes"/>
     <c:if test="${not empty messages}">
         <page:list id="pl_com_aeiou_bigbang_domain_Message" items="${messages}" z="user-managed">
-            <table:BigMessageTable data="${messages}" id="l_com_aeiou_bigbang_domain_Remark" path="/messages" z="adZ9QX5p0p5Qz2fIt8EVxJHpMH0=">
+           <!--  <table:BigMessageTable data="${messages}" id="l_com_aeiou_bigbang_domain_Remark" delete="true" path="/messages" z="adZ9QX5p0p5Qz2fIt8EVxJHpMH0=">
                 <table:column id="c_com_aeiou_bigbang_domain_Remark_publisher" property="publisher" z="/MCkBnq2SAbaEYDclJ/Zh3aPyIs="/>
                 <table:column date="true" id="c_com_aeiou_bigbang_domain_Remark_remarkTime" property="postTime" z="JcnWePBsDBs4KzGQzxe1ZsM+1PU="/>
-            </table:BigMessageTable>
+            </table:BigMessageTable> -->
+            <table:BigSortable data="${messages}" id="l_com_aeiou_bigbang_domain_Message" delete="true" path="/messages" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
+	            <table:column id="c_com_aeiou_bigbang_domain_message_content" property="content" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
+	            <table:column id="c_com_aeiou_bigbang_domain_message_publisher" property="publisher" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
+	            <table:column id="c_com_aeiou_bigbang_domain_message_receiver" property="receiver" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
+                <table:column date="true" id="c_com_aeiou_bigbang_domain_Remark_remarkTime" property="postTime" z="JcnWePBsDBs4KzGQzxe1ZsM+1PU="/>
+	        </table:BigSortable>
         </page:list>
         <br/>
     </c:if>
