--- a/src/main/webapp/WEB-INF/views/twitters/create.jspx
+++ b/src/main/webapp/WEB-INF/views/twitters/create.jspx
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" version="2.0">
+<div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" 
+xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:springform="http://www.springframework.org/tags/form"
+xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:create id="fc_com_aeiou_bigbang_domain_Twitter" modelAttribute="twitter" path="/twitters" render="${empty dependencies}" z="C8PXUylrKuANxmZEPg1IxGp6i7c=">
+		<springform:hidden path="addingTagFlag" id="addingTagFlag" name="addingTagFlag"/> 
         <field:input field="twtitle" id="c_com_aeiou_bigbang_domain_Twitter_twtitle" z="/V/4pAH3rrkLN/hSaWVYngTahFk="/>
         <field:editor field="twitent" id="c_com_aeiou_bigbang_domain_Twitter_twitent" required="true" height="300" z="user-managed"/>
         <!-- <field:datetime dateTimePattern="${twitter_twitdate_date_format}" field="twitDate" id="c_com_aeiou_bigbang_domain_Twitter_twitDate" required="true" z="RtLPo9UnRiHc0ybqItC4AqnRkw4="/>
