--- a/src/main/webapp/WEB-INF/views/login.jspx
+++ b/src/main/webapp/WEB-INF/views/login.jspx
@@ -5,7 +5,7 @@
   <jsp:directive.page contentType="text/html;charset=UTF-8" />
   <jsp:output omit-xml-declaration="yes" />
   <spring:message code="security_login_title" var="title" htmlEscape="false" />
-  <spring:message code="security_login_title2" var="title2" htmlEscape="false" />
+  <spring:message code="security_signup_message" var="title2" htmlEscape="false" />
   <table class="tWireless"><tr>
   	<td class="tWireless nopaddingleft" valign="top">
 	  <util:panel id="title" title="${title}">
@@ -82,16 +82,14 @@
 	 </td>
 	 <td class="tWireless nopaddingleft" valign="top">
 		<util:panel id="title2" title="${title2}">
-		   <p>
-		        <!--  spring:message code="security_signup_message" />-->
-		        This is for new user, the following is our aggreement :   
-		   </p>
-		   <p>1. you password and infomation is not safe here, and not safe anywhere in the internet.</p>
-		   <p>2. we might have to give up protecting your right when we are muscled by the government</p>
-		   <p>3.You have to protect youself if you edited anything which will cause anyone unhappy. </p>
-		   <p>if you agree all of them, please click the agree link at the end.</p>
-		   <p>in the coming page, select an unused username, set up your password and contact email,</p>
-		   <p>then go :-)</p>
+           <p><spring:message code="security_signup_reason_0" /></p>
+           <p><spring:message code="security_signup_reason_1" /></p>
+           <p><spring:message code="security_signup_reason_2" /></p>
+           <p><spring:message code="security_signup_reason_3" /></p>
+           <p><spring:message code="security_signup_reason_4" /></p>
+           <p><spring:message code="security_signup_reason_5" /></p>
+           <p><spring:message code="security_signup_reason_last" /></p>
+           <br/>
 		   <spring:url value="/useraccounts" var="create_url">
 	        	<spring:param name="form" />
 	       </spring:url>
